add opengl module

--- a/avfun/CMakeLists.txt
+++ b/avfun/CMakeLists.txt
@@ -78,7 +78,18 @@ set_property(TARGET swscale PROPERTY
 			)
 
 set(ffmpeg avcodec avdevice avfilter avformat avutil postproc swresample swscale)
-	
+
+####################### glad #######################
+if(WIN32)
+	set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/win)
+	set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
+elseif(ANDROID)
+	set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/android)
+	set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
+else()
+	set(GLAD_SOURCE )
+endif()
+
 ####################### source #######################
 	
 set(AVFUN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
@@ -86,12 +97,12 @@ set(CODEC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/codec)
 set(RENDER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render)
 	
 set(SOURCE_FILE 
-${CMAKE_CURRENT_SOURCE_DIR}/AVCommon.h
-${CMAKE_CURRENT_SOURCE_DIR}/LogUtil.h
-${CMAKE_CURRENT_SOURCE_DIR}/AVStream.h
-${CMAKE_CURRENT_SOURCE_DIR}/AVStream.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/AVVideoStream.h
-${CMAKE_CURRENT_SOURCE_DIR}/AVVideoStream.cpp
+${AVFUN_DIR}/AVCommon.h
+${AVFUN_DIR}/LogUtil.h
+${AVFUN_DIR}/AVStream.h
+${AVFUN_DIR}/AVStream.cpp
+${AVFUN_DIR}/AVVideoStream.h
+${AVFUN_DIR}/AVVideoStream.cpp
 
 ${CODEC_DIR}/ffmpeg_config.h
 ${CODEC_DIR}/AVAudioBuffer.h
@@ -106,7 +117,15 @@ ${CODEC_DIR}/AVVideoFrame.h
 ${CODEC_DIR}/AVVideoFrame.cpp
 ${CODEC_DIR}/AVVideoReader.h
 ${CODEC_DIR}/AVVideoReader.cpp
+
+${RENDER_DIR}/GLProgram.h
+${RENDER_DIR}/GLProgram.cpp
+${RENDER_DIR}/GLTexture.h
+${RENDER_DIR}/GLTexture.cpp
+
 )
+
+list(APPEND SOURCE_FILE ${GLAD_SOURCE})
 
 source_group_by_files(SOURCE_FILE)
 
@@ -114,7 +133,7 @@ add_library(${PRO_NAME} STATIC ${SOURCE_FILE})
 
 target_link_libraries(${PRO_NAME} PUBLIC ${ffmpeg} yuv ${OpenCV_LIBS} SDL2)
 target_include_directories(${PRO_NAME} PUBLIC 
-${AVFUN_DIR} ${ffmpeg_INCLUDE} ${libyuv_INCLUDE} ${OpenCV_INCLUDE_DIRS})
+${AVFUN_DIR} ${GLAD_DIR} ${ffmpeg_INCLUDE} ${libyuv_INCLUDE} ${OpenCV_INCLUDE_DIRS})
 
 ####################### example #######################
 add_executable(${PRO_NAME}-example01 ${AVFUN_DIR}/example/example01.cpp)
@@ -123,7 +142,14 @@ target_link_libraries(${PRO_NAME}-example01 PRIVATE ${PRO_NAME})
 add_executable(${PRO_NAME}-example02 ${AVFUN_DIR}/example/example02.cpp)
 target_link_libraries(${PRO_NAME}-example02 PRIVATE ${PRO_NAME})
 
+add_executable(${PRO_NAME}-example03 ${AVFUN_DIR}/example/example03.cpp)
+target_link_libraries(${PRO_NAME}-example03 PRIVATE ${PRO_NAME})
 
-file(COPY ${ffmpeg_DIR}/bin/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${OpenCV_DIR}/x64/vc15/bin/opencv_world451d.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${sdl_DIR}/build/Debug/SDL2d.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#file(COPY ${ffmpeg_DIR}/bin/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#file(COPY ${OpenCV_DIR}/x64/vc15/bin/opencv_world451d.dll 
+#${OpenCV_DIR}/x64/vc15/bin/opencv_world451.dll 
+#${OpenCV_DIR}/x64/vc15/bin/opencv_videoio_ffmpeg451_64.dll 
+#DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#file(COPY ${sdl_DIR}/build/Debug/SDL2d.dll 
+#${sdl_DIR}/build/Release/SDL2.dll 
+#DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
