--- a/win_player/CMakeLists.txt
+++ b/win_player/CMakeLists.txt
@@ -3,13 +3,16 @@ set(PRO_NAME win_player)
 ## support c++17
 set(CMAKE_CXX_STANDARD 17)
 
-set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/third_party)
+#set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/third_party)
+
+set(AVFUN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
+include(${AVFUN_ROOT}/cmake/ffmpeg.cmake)
 
 ####################### sdl #######################
-set(sdl_DIR ${THIRD_PARTY_DIR}/SDL2-2.0.14)
+#set(sdl_DIR ${THIRD_PARTY_DIR}/SDL2-2.0.14)
 
 ####################### source #######################
-	
+
 set(PLAYER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 	
@@ -41,22 +44,22 @@ ${PLAYER_DIR}/MainWindow.h
 ${PLAYER_DIR}/MainWindow.cpp
 ${PLAYER_DIR}/ControlView.h
 ${PLAYER_DIR}/ControlView.cpp
-${PLAYER_DIR}/DisplayView.h
-${PLAYER_DIR}/DisplayView.cpp
+${PLAYER_DIR}/SurfaceView.h
+${PLAYER_DIR}/SurfaceView.cpp
 )
 
 list(APPEND SOURCE_FILE ${IMGUI_SOURCE})
 
 source_group_by_files(SOURCE_FILE)
-message(hecc--${SOURCE_FILE})
+
 add_executable(${PRO_NAME} ${SOURCE_FILE})
 
 target_link_libraries(${PRO_NAME} PRIVATE avfun)
 #target_include_directories(${PRO_NAME} PUBLIC )
 
-if (WIN32)
-    file(COPY ${sdl_DIR}/build/Debug/SDL2d.dll
-            ${sdl_DIR}/build/Release/SDL2.dll
-            DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-endif ()
+#if (WIN32)
+#    file(COPY ${sdl_DIR}/build/Debug/SDL2d.dll
+#            ${sdl_DIR}/build/Release/SDL2.dll
+#            DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#endif ()
 
