--- a/win_player/CMakeLists.txt
+++ b/win_player/CMakeLists.txt
@@ -15,38 +15,38 @@ include(${AVFUN_ROOT}/cmake/ffmpeg.cmake)
 
 set(PLAYER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-	
-set(IMGUI_SOURCE 
-${PLAYER_DIR}/imgui/imconfig.h
-${PLAYER_DIR}/imgui/imgui.cpp
-${PLAYER_DIR}/imgui/imgui.h
-${PLAYER_DIR}/imgui/imgui_demo.cpp
-${PLAYER_DIR}/imgui/imgui_draw.cpp
-${PLAYER_DIR}/imgui/imgui_internal.h
-${PLAYER_DIR}/imgui/imgui_tables.cpp
-${PLAYER_DIR}/imgui/imgui_widgets.cpp
-${PLAYER_DIR}/imgui/imstb_rectpack.h
-${PLAYER_DIR}/imgui/imstb_textedit.h
-${PLAYER_DIR}/imgui/imstb_truetype.h
 
-${PLAYER_DIR}/imgui/imgui_impl_sdl.h
-${PLAYER_DIR}/imgui/imgui_impl_sdl.cpp
-${PLAYER_DIR}/imgui/imgui_impl_opengl3.h
-${PLAYER_DIR}/imgui/imgui_impl_opengl3.cpp
+set(IMGUI_SOURCE
+        ${PLAYER_DIR}/imgui/imconfig.h
+        ${PLAYER_DIR}/imgui/imgui.cpp
+        ${PLAYER_DIR}/imgui/imgui.h
+        ${PLAYER_DIR}/imgui/imgui_demo.cpp
+        ${PLAYER_DIR}/imgui/imgui_draw.cpp
+        ${PLAYER_DIR}/imgui/imgui_internal.h
+        ${PLAYER_DIR}/imgui/imgui_tables.cpp
+        ${PLAYER_DIR}/imgui/imgui_widgets.cpp
+        ${PLAYER_DIR}/imgui/imstb_rectpack.h
+        ${PLAYER_DIR}/imgui/imstb_textedit.h
+        ${PLAYER_DIR}/imgui/imstb_truetype.h
 
-)
+        ${PLAYER_DIR}/imgui/imgui_impl_sdl.h
+        ${PLAYER_DIR}/imgui/imgui_impl_sdl.cpp
+        ${PLAYER_DIR}/imgui/imgui_impl_opengl3.h
+        ${PLAYER_DIR}/imgui/imgui_impl_opengl3.cpp
 
-set(SOURCE_FILE 
-${PLAYER_DIR}/main.cpp
-${PLAYER_DIR}/App.h
-${PLAYER_DIR}/App.cpp
-${PLAYER_DIR}/MainWindow.h
-${PLAYER_DIR}/MainWindow.cpp
-${PLAYER_DIR}/ControlView.h
-${PLAYER_DIR}/ControlView.cpp
-${PLAYER_DIR}/SurfaceView.h
-${PLAYER_DIR}/SurfaceView.cpp
-)
+        ${PLAYER_DIR}/imgui/ImGuiFileDialog.h
+        ${PLAYER_DIR}/imgui/ImGuiFileDialog.cpp
+        )
+
+set(SOURCE_FILE
+        ${PLAYER_DIR}/main.cpp
+        ${PLAYER_DIR}/App.h
+        ${PLAYER_DIR}/App.cpp
+        ${PLAYER_DIR}/ControlView.h
+        ${PLAYER_DIR}/ControlView.cpp
+        ${PLAYER_DIR}/SurfaceView.h
+        ${PLAYER_DIR}/SurfaceView.cpp
+        )
 
 list(APPEND SOURCE_FILE ${IMGUI_SOURCE})
 
