compile for ubuntu-desktop

--- a/avfun/CMakeLists.txt
+++ b/avfun/CMakeLists.txt
@@ -7,20 +7,24 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(AVFUN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
+include(${AVFUN_ROOT}/cmake/platform.cmake)
 include(${AVFUN_ROOT}/cmake/sdl.cmake)
 include(${AVFUN_ROOT}/cmake/opencv.cmake)
 include(${AVFUN_ROOT}/cmake/libyuv.cmake)
 include(${AVFUN_ROOT}/cmake/ffmpeg.cmake)
 
 ####################### glad #######################
-if (WIN32)
+if (AVF_WIN32)
     set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/win)
     set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
-elseif (ANDROID)
+elseif (AVF_ANDROID)
     set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/android)
     set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
-elseif (APPLE)
+elseif (AVF_MACOS)
     set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/mac)
+    set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
+elseif (AVF_LINUX)
+    set(GLAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/render/glad/linux)
     set(GLAD_SOURCE ${GLAD_DIR}/glad/glad.h ${GLAD_DIR}/KHR/khrplatform.h ${GLAD_DIR}/glad.c)
 else ()
     set(GLAD_SOURCE)
