--- a/android_player/AVFunCore/build.gradle
+++ b/android_player/AVFunCore/build.gradle
@@ -16,7 +16,7 @@ android {
             cmake {
                 arguments "-DCMAKE_BUILD_TYPE=DEBUG"
                 cppFlags "-std=c++17"
-                abiFilters "arm64-v8a"//"armeabi-v7a" ,
+                abiFilters "arm64-v8a", "armeabi-v7a"
             }
         }
     }
@@ -28,6 +28,7 @@ android {
         }
         debug {
             jniDebuggable true
+            debuggable true
         }
     }
     externalNativeBuild {
