--- a/android_player/app/build.gradle
+++ b/android_player/app/build.gradle
@@ -22,6 +22,7 @@ android {
         }
         debug {
             jniDebuggable true
+            debuggable true
         }
     }
     compileOptions {
